feat: support hans